--- a/assets/scss/base/_typo.scss
+++ b/assets/scss/base/_typo.scss
@@ -1,34 +1,34 @@
 @font-face {
   font-family: 'Visby_CF_Bold';
-  src: url('../../../assets/fonts/VisbyCF-Bold.woff2') format('woff2');
+  src: url('../fonts/VisbyCF-Bold.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Visby_CF_Medium';
-  src: url('../../../assets/fonts/VisbyCF-Medium.otf') format('OpenType');
+  src: url('../fonts/VisbyCF-Medium.otf') format('OpenType');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Visby_CF_SemiBold';
-  src: url('../../../assets/fonts/VisbyCF-SemiBold.woff2') format('woff2');
+  src: url('../fonts/VisbyCF-SemiBold.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Visby_CF_ExtraBold';
-  src: url('../../../assets/fonts/VisbyCF-ExtraBold.otf') format('OpenType');
+  src: url('../fonts/VisbyCF-ExtraBold.otf') format('OpenType');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Visby_CF_Regular';
-  src: url('../../../assets/fonts/VisbyCF-Regular.otf') format('OpenType');
+  src: url('../fonts/VisbyCF-Regular.otf') format('OpenType');
   font-weight: normal;
   font-style: normal;
 }
